--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "swiper": "^12.0.1",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
     "vue-i18n": "^11.1.12",
