--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "@tailwindcss/vite": "^4.1.13",
     "swiper": "^12.0.1",
     "tailwindcss": "^4.1.13",
