--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@tailwindcss/vite": "^4.1.13",
+    "chart.js": "^4.5.0",
+    "pinia": "^3.0.3",
     "swiper": "^12.0.1",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2",
     "vue-i18n": "^11.1.12",
     "vue-router": "^4.5.1"
   },
