--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "pinia": "^3.0.3",
     "swiper": "^12.0.1",
