--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "@yaireo/tagify": "^4.35.4",
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
+    "laravel-echo": "^2.2.0",
     "pinia": "^3.0.3",
+    "pusher-js": "^8.4.0",
     "swiper": "^12.0.1",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
